--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="main-container">
       <div class="header-text">
-        <img src="/assets/dog.png" alt="" class="src" />
+        <img src="assets/dog.png" alt="" class="src" />
         <p>Abre tontis</p>
       </div>
       <div class="envelope-wrapper" id="envelope">
@@ -27,7 +27,7 @@
                 Para el amor de mi vida, mi pupuchurra
               </h2>
               <div class="kirby-container">
-                <img src="/assets/kirby.png" alt="" class="sr" />
+                <img src="assets/kirby.png" alt="" class="sr" />
                 <button class="next-btn" onclick="showText(event)">
                   Abrir
                 </button>
@@ -46,7 +46,7 @@
                   sentimiento, mi linda bella, te quiero pedir algo importante
                   :)
                 </p>
-                <img src="/assets/hamster.png" alt="" />
+                <img src="assets/hamster.png" alt="" />
               </div>
               <button class="next-btn" onclick="showQuestion(event)">
                 Continuar
@@ -59,7 +59,7 @@
                 <button class="btn-yes" id="yesBtn">SÍ</button>
                 <button class="btn-no" id="noBtn">NO</button>
               </div>
-              <img src="/assets/eyebrow.png" alt="" class="eyebrow">
+              <img src="assets/eyebrow.png" alt="" class="eyebrow">
             </div>
           </div>
 
